# Projeto-EDOO

./: .gitignore  README.md  sla.jsx
backEnd/: .gitignore  CMakeLists.txt  main.cpp
backEnd/include/: Agendamento.h  ArquivoManager.h  Barba.h  Barbearia.h  Barbeiro.h  Cliente.h  Faxineira.h  Funcionarios.h  Gestor.h  Pessoa.h  Servico.h
backEnd/src/: Agendamento.cpp  ArquivoManager.cpp  Barba.cpp  Barbeiro.cpp  Cliente.cpp  Faxineira.cpp  Funcionarios.cpp  Gestor.cpp  Pessoa.cpp  Servico.cpp
backend/: backend.sln
backend/backend/: ApiServer.cpp  ApiServer.h  Database.cpp  Database.h  backend.cpp  backend.vcxproj  backend.vcxproj.filters  exemplo.db  packages.config
backend/backend/Debug/: backend.exe.recipe  vc142.idb
backend/backend/controladores/: AgendamentoControlador.cpp  AgendamentoControlador.h  BarbeiroControlador.cpp  BarbeiroControlador.h  ClienteControlador.cpp  ClienteControlador.h  FuncionarioControlador.cpp  FuncionarioControlador.h  GestorControlador.cpp  GestorControlador.h  PessoaControlador.cpp  PessoaControlador.h  ServicoControlador.cpp  ServicoControlador.h
backend/backend/modelos/: Agendamento.cpp  Agendamento.h  Barbeiro.cpp  Barbeiro.h  Cliente.cpp  Cliente.h  Funcionario.cpp  Funcionario.h  Gestor.cpp  Gestor.h  Pessoa.cpp  Pessoa.h  Servico.cpp  Servico.h
backend/backend/repositorios/: AgendamentoRepositorio.cpp  AgendamentoRepositorio.h  BarbeiroRepositorio.cpp  BarbeiroRepositorio.h  ClienteRepositorio.cpp  ClienteRepositorio.h  (+8 more)
frontEnd/: package-lock.json  package.json
frontEnd/src/: App.css  App.tsx  main.tsx
(+47 files in other folders)
